going back to working on reviews and posts but ran into an error

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "image-map-resizer": "^1.0.3",
     "bootstrap": "^3.3.7",
-    "waypoints": "^4.0.1"
+    "waypoints": "^4.0.1",
+    "slick": "*"
   }
 }
