--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "gulp-wiredep": "^1.2.0",
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1"
+  },
+  "dependencies": {
+    "gulp-sourcemaps": "^2.6.0"
   }
 }
