--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "image-map-resizer": "^1.0.3",
     "bootstrap": "^3.3.7",
     "waypoints": "^4.0.1",
-    "slick-carousel": "^1.6.0"
+    "slick-carousel": "^1.6.0",
+    "flip": "^1.1.2"
   }
 }
