--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "stevenmaguire/yelp-php": "^2.0",
         "facebook/graph-sdk": "^5.5",
         "cosenary/instagram": "^2.3",
-        "stevenmaguire/oauth2-yelp": "^0.1.0"
+        "stevenmaguire/oauth2-yelp": "^0.1.0",
+        "phpmailer/phpmailer": "^5.2"
     }
 }
