--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "disable-scroll": "^0.5.1",
     "dotenv-flow": "^3.2.0",
     "facebook-nodejs-business-sdk": "^7.0.2",
     "fbgraph": "^1.4.4",
@@ -16,8 +17,10 @@
     "react-bootstrap-icons": "^1.0.3-alpha5",
     "react-burger-menu": "^2.7.0",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-slideshow-image": "^3.0.2",
     "yelp-fusion": "^3.0.0"
   },
   "scripts": {
