--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "dotenv-flow": "^3.2.0",
     "facebook-nodejs-business-sdk": "^7.0.2",
     "fbgraph": "^1.4.4",
+    "image-map-resizer": "^1.0.10",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-bootstrap-icons": "^1.0.3-alpha5",
     "react-burger-menu": "^2.7.0",
+    "react-card-flip": "^1.0.11",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
