--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll-to-top": "^1.0.5",
     "react-slideshow-image": "^3.0.2",
     "yelp-fusion": "^3.0.0"
   },
