--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv-flow": "^3.2.0",
     "facebook-nodejs-business-sdk": "^7.0.2",
     "fbgraph": "^1.4.4",
+    "global": "^4.4.0",
     "image-map-resizer": "^1.0.10",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
