--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-burger-menu": "^2.7.0",
     "react-card-flip": "^1.0.11",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
